--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="hotel"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- TODO: Add your Google Maps API key here -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AlzaSyDPSK1qumWLSmkbURmcjADNAtph_Aohv7k"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
